HDS-4377 Fix z-index issues for full screen Code Editor in web docs examples

--- a/website/app/styles/pages/application/sidebar.scss
+++ b/website/app/styles/pages/application/sidebar.scss
@@ -11,11 +11,6 @@ $doc-page-sidebar-transition-duration: 0.25s;
 
 // ⚠️ ---  the sidebar "navigation" is different between the homepage and the other pages --- ⚠️
 
-// if dialog is open, set sidebar z-index to 1
-.doc-page-wrapper:has(dialog[open]) {
-  --doc-z-index-sidebar: 1;
-}
-
 // HOME PAGE
 // This is a special case: the sidebar is horizontal and is visible *only* on small viewports (when opened)
 
@@ -63,6 +58,17 @@ body.application.index {
 // ALL THE OTHER PAGES
 
 body.application:not(.index) {
+  // if dialog is open, set sidebar z-index to 1
+  &.doc-page-wrapper:has(dialog[open]),
+  &.doc-page-wrapper:has(.hds-code-editor--is-full-screen) {
+    --doc-z-index-sidebar: 1;
+  }
+
+  // if code editor is in full screen mode, set page peader z-index to 1
+  &.doc-page-wrapper:has(.hds-code-editor--is-full-screen) {
+    .doc-page-header {z-index: 1;}
+  }
+
   // Notice: for `display` and animation/transition look below
   .doc-page-sidebar {
     position: fixed;
